--- a/kooplexhub/kooplex/hub/templates/app/notebooks.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks.html
@@ -15,7 +15,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-          {% if username %}
+          {% if user.is_authenticated %}
               <li class="active" ><a href="#myprojects" data-toggle="tab">My projects</a></li>
               <li><a href="#running" data-toggle="tab">Running containers </a></li>
               <li><a href="#otherprojects" data-toggle="tab">Other public projects</a></li>
@@ -27,7 +27,7 @@
 </nav>
 </div>
 <div class=" col-md-6 col-sm-6 col-xs-6">
-      {% if username %}
+      {% if user.is_authenticated %}
           {% include 'app/notebooks-new-partial.html' with myprojects=True %}
         <a href="#" data-toggle="modal" data-target="#project-new"><button type="button" class="btn btn-lg  btn-primary navbar-btn">Start new project </button></a>
         {%  if errors %}
@@ -46,7 +46,7 @@
 {% endif %}
  <div class="tab-content">
 
-  {% if username %}
+  {% if user.is_authenticated %}
 
     <div id="myprojects" class="tab-pane fade in active">
         {% for item in shared_with_me_projects %}
@@ -68,9 +68,7 @@
  <div id="otherprojects" class="tab-pane fade projects ">
 
      {% for item in public_projects %}
-    {% if item.owner.username != username %}
         {% include 'app/notebooks-project-partial.html' with publicvar=True %}
-    {% endif %}
     {% endfor %}
     </div>
 
