--- a/kooplexhub/kooplex/hub/templates/app/project-members.html
+++ b/kooplexhub/kooplex/hub/templates/app/project-members.html
@@ -20,7 +20,7 @@
                                 <div class="form-group">
                                     {% for member in currentmembers %}
                                         <input type="checkbox" name="user_id" value="{{ member.gitlab_id }}">
-                                        {{ member.gitlab_id }} {{ member.user.firstname }} {{ member.user.lastname }} {{ member.user.username }}
+                                        {{ member.gitlab_id }} {{ member.first_name }} {{ member.last_name }} ({{ member.username }})
                                         <br>
                                     {% endfor %}
 
@@ -59,8 +59,8 @@
                                 <h4> Members</h4>
                                 <div class="form-group">
                                     {% for user in otherusers %}
-                                        <input type="checkbox" name="user_id" value="{{ user.id }}">
-                                        {{ user.id }} {{ user.firstname }} {{ user.lastname }} {{ user.username }}
+                                        <input type="checkbox" name="user_id" value="{{ user.gitlab_id }}">
+                                        {{ user.gitlab_id }} {{ user.first_name }} {{ user.last_name }} ({{ user.username }})
                                         <br>
                                     {% endfor %}
 
