--- a/kooplexhub/kooplex/hub/templates/app/notebooks-change-image.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-change-image.html
@@ -1,6 +1,5 @@
 ﻿<!-- Modal -->
-<div id="change-image-{{ item.safename }}" class="modal fade" role="dialog">
-  <div class="modal-dialog">
+<div id="change-image-{{ item.safename }}" class="modal fade modal-dialog" role="dialog">
 
     <!-- Modal content-->
     <div class="modal-content">
@@ -30,5 +29,4 @@
         </form>
     </div>
 
-  </div>
 </div>
