--- a/kooplexhub/kooplex/hub/templates/app/notebooks-delete-project.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-delete-project.html
@@ -1,6 +1,5 @@
 ﻿<!-- Modal -->
-<div id="delete-project-{{ item.id }}" class="modal fade" role="dialog">
-  <div class="modal-dialog">
+<div id="delete-project-{{ item.id }}" class="modal fade modal-dialog" role="dialog">
 
     <!-- Modal content-->
     <div class="modal-content">
@@ -17,5 +16,5 @@
         </form>
     </div>
 
-  </div>
+
 </div>
