--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -1,7 +1,6 @@
 ﻿<!-- Modal -->
+<div id="project-new" class="modal fade modal-dialog" role="dialog">
 
-<div id="project-new" class="modal fade" role="dialog">
-  <div class="modal-dialog">
 
     <!-- Modal content-->
     <div class="modal-content">
@@ -43,11 +42,10 @@
                 </fieldset>
               </div>
               <div class="modal-footer">
-                <button type="submit"class="btn btn-default" title="OK"> Create</button>
+                <button type="submit" class="btn btn-default" title="OK"> Create</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
               </div>
         </form>
     </div>
 
   </div>
-</div>
