--- a/kooplexhub/kooplex/hub/templates/app/notebooks-project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-project-partial.html
@@ -1,28 +1,27 @@
 ﻿{% load custom_tags %}
 
-<!--<div style="display:inline; width:128px; height:128px">
-    {% if item.avatar_url %}
-    <img src="{{ item.avatar_url }}" style="width:128px; height:128px" />
-    {% endif %}
-</div> -->
+<div class=" col-md-12 col-sm-12 col-xs-12" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+     xmlns="http://www.w3.org/1999/html">
+        <a data-toggle="collapse"  href="#collapse{{ item.id }}" style="text-decoration: none">
+        {% if item.id in running  %}
+            <div class="panel  panel-success panel-sm">
+            <div class="panel-heading ">
+               <strong>{{ item.name }}</strong> </h4> Running {% if item.owner_username != user.username %} ( owned by {{ item.owner_username }} ) {%  endif  %}
+        {% else %}
+            <div class="panel panel-default panel-sm">
+            <div class="panel-heading">
+               <span> <strong>{{ item.name }}</strong> </span>{% if item.owner_username != user.username %} ( owned by {{ item.owner_username }} ) {%  endif  %}
+        {% endif %}
 
-<div class=" col-md-12 col-sm-12 col-xs-12" xmlns="http://www.w3.org/1999/html">
-    {% if item.id in running  %}
-        <div class="panel  panel-success">
-        <div class="panel-heading ">
-            <h4> <strong>{{ item.name }}</strong> </h4> Running {% if item.owner_username != user.username %} ( owned by {{ item.owner_username }} ) {%  endif  %}
-    {% else %}
-        <div class="panel panel-default ">
-        <div class="panel-heading">
-           <h4> <strong>{{ item.name }}</strong> </h4>{% if item.owner_username != user.username %} ( owned by {{ item.owner_username }} ) {%  endif  %}
-    {% endif %}
+        {% if 'forked_from_project' in item %} : forked from
+            <a href="{{ base_url }}/gitlab/{{ item.forked_from_project.path_with_namespace }}" target="_blank">{{ item.forked_from_project.path_with_namespace }}</a>
+        {% endif %}
+            <span style="padding-left:50px;"> Using image:<strong> {{ item.image }}  </strong></span>
+        </a>
+            </div>
 
-            {% if 'forked_from_project' in item %} : forked from
-                <a href="{{ base_url }}/gitlab/{{ item.forked_from_project.path_with_namespace }}" target="_blank">{{ item.forked_from_project.path_with_namespace }}</a>
-            {% endif %}
-        </div>
-
-        <div class="panel-body">
+        <div id="collapse{{ item.id }}" class="panel-collapse collapse">
+            <div class="panel-body">
 
                 <div class=" col-md-2 col-sm-2 col-xs-12">
                     {{ item.description }}
@@ -34,14 +33,14 @@
                     <div class="row">
                         {% if not publicvar %}
                             {% if item.id in running  %}
-                                <a href="{% url 'container-delete' %}?project_id={{ item.id }}" class="btn btn-danger" role="button">
-                                <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span> Stop</a>
+                                <a href="{% url 'container-delete' %}?project_id={{ item.id }}">
+                                 <button role="button" type="button" class="btn btn-danger" data-toggle="tooltip" title="Stop project container {{ item.name }}" data-placement="top">
+                                 <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button></a>
 
                             {% else %}
-                                <!--a role="button" href="{% url 'container-start' %}?project_id={{ item.id }}{% if 'forked_from_project' in item %}&is_forked=True&project_id={{ item.id }}&target_id={{ item.forked_from_project.id }}{% else%}&is_forked=False{% endif %}"-->
-                                <a role="button" href="{% url 'container-start' %}?project_id={{ item.id }}">
-                                <button role="button" type="button" class="btn btn-success" >
-                                    <span class="glyphicon glyphicon-play" aria-hidden="true"></span> Start</button></a>
+                                <a href="{% url 'container-start' %}?project_id={{ item.id }}">
+                                <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Start project container {{ item.name }}" data-placement="top">
+                                <span class="glyphicon glyphicon-play" aria-hidden="true"></span></button></a>
 
                             {% endif %}
                         {% endif %}
@@ -51,31 +50,30 @@
                             {% resolve sessions item.id as session %}
 
 
-                            <a href="{{ session.external_url }}" target="_blank" class="btn btn-success" role="button">
-                            <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Open</a>
-                            <a role="button" href="{% url 'notebooks-publishform' %}?project_id={{ item.id  }}">
-                            <button role="button" type="button" class="btn btn-warning">
-                                <span class="glyphicon glyphicon-flag" aria-hidden="true"></span> Publish</button></a>
+                            <a href="{{ session.external_url }}" target="_blank">
+                             <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Open project container: {{ item.name }}" data-placement="top">
+                             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span></button></a>
+                            <a href="{% url 'notebooks-publishform' %}?project_id={{ item.id  }}">
+                             <button role="button" type="button" class="btn btn-warning" data-toggle="tooltip" title="Publish project: {{ item.name }}" data-placement="top">
+                             <span class="glyphicon glyphicon-flag" aria-hidden="true"></span></button></a>
+                            <a href="#">
+                             <button type="button" class="btn btn-default" data-toggle="tooltip" title="Changing image is disabled, stop project container {{ item.name }} to enable this button" data-placement="top">
+                             <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span></button></a>
                         {% else %}
-                            <button role="button" type="button" class="btn btn-default" data-toggle="modal"  data-target="#notebook-warning-start">
-                                    <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Open</button>
-                            <button role="button" type="button" class="btn btn-default" data-toggle="modal"  data-target="#notebook-warning-start">
-                                    <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Publish</button>
+
+                            <a href="#">
+                             <button role="button" type="button" class="btn btn-default" data-toggle="tooltip" title="Start project container {{ item.name }} to enable this button" data-placement="top">
+                             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span></button></a>
+                            <a href="#">
+                             <button role="button" type="button" class="btn btn-default" data-toggle="tooltip" title="Start project container {{ item.name }} to enable this button" data-placement="top">
+                             <span class="glyphicon glyphicon-flag" aria-hidden="true"></span></button></a>
+                            <a href="#" data-toggle="modal" data-target="#change-image-{{ item.safename  }}">
+                             <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="Change container image for project {{ item.name }}" data-placement="top">
+                             <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span></button></a>
+
                         {% endif %}
                         {% endif %}
 
-                    {% if not publicvar %}
-                        {% if item.id in running  %}
-                            <button type="button" class="btn btn-default" data-toggle="modal"  data-target="#notebook-warning-stop">
-                            <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>Using image:<p><strong> {{ item.image }}  </strong></p></button>
-                        {% else %}
-                                <button type="button" class="btn btn-info" data-toggle="modal"  data-target="#change-image-{{ item.safename  }}">
-                                    <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> Change image <p><strong> {{ item.image }}  </strong></p></button>
-                                {% include 'app/notebooks-change-image.html' %}
-                        {% endif %}
-
-
-                    {% endif %}
                     </div>
                 </div>
 
@@ -131,23 +129,26 @@
                 <div class=" col-md-3 col-sm-3 col-xs-3">
                     {% if not publicvar %}
                         {% comment  %}{% include 'app/notebooks-delete-project.html' %} {% endcomment %}
-                        <p><a href="{% url 'project-members-form' %}?project_id={{ item.id }}" class="btn btn-primary" role="button">
-                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Members</a></p>
+                        <a href="{% url 'project-members-form' %}?project_id={{ item.id }}" class="btn btn-primary" role="button">
+                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Members</a>
                         {% if item.id not in running  %}
-                            {% include 'app/notebooks-delete-project.html' %}
                             <button type="button" class="btn btn-danger" data-toggle="modal"  data-target="#delete-project-{{ item.id }}">
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete project</button>
                         {% else %}
-                            {% include 'app/notebooks-warning.html' %}
-                            <button type="button" class="btn btn-default" data-toggle="modal"  data-target="#notebook-warning-stop">
+
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Stop container to enable this button" data-placement="top">
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete project</button>
                         {% endif %}
 
                     {% endif %}
                 </div>
+                {% include 'app/notebooks-change-image.html' %}
+                {% include 'app/notebooks-delete-project.html' %}
+            </div>
+        </div>
+        </div>
 
-            </div>
-            </div>
+
 
 
 
