--- a/kooplexhub/kooplex/hub/templates/app/notebooks.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks.html
@@ -4,43 +4,41 @@
 {% block content %}
 
 
-<div class="container">
+
+
 
 <div class="row">
-<div class=" col-md-6 col-sm-6 col-xs-6">
 <nav class="navbar navbar-default">
- <div class="container-fluid">
-
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-          {% if user.is_authenticated %}
-              <li class="active" ><a href="#myprojects" data-toggle="tab">My projects</a></li>
-              <li><a href="#running" data-toggle="tab">Running containers </a></li>
-              <li><a href="#otherprojects" data-toggle="tab">Other public projects</a></li>
-          {% endif %}
+          <li class="active" ><a href="#myprojects" data-toggle="tab">My projects</a></li>
+          <li><a href="#running" data-toggle="tab">Running containers </a></li>
+          <li><a href="#otherprojects" data-toggle="tab">Other public projects</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="{% url 'toggle-oc' %}"><button type="button" class="btn btn-lg  btn-primary navbar-btn">Folder synchronisation </button></a></li>
+        <li><a href="#" data-toggle="modal" data-target="#project-new"><button type="button" class="btn btn-lg  btn-primary navbar-btn">Start new project </button></a></li>
 
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+{% include 'app/notebooks-new-partial.html' with myprojects=True %}
 </div>
-<div class=" col-md-6 col-sm-6 col-xs-6">
-      {% if user.is_authenticated %}
-          {% include 'app/notebooks-new-partial.html' with myprojects=True %}
-        <a href="#" data-toggle="modal" data-target="#project-new"><button type="button" class="btn btn-lg  btn-primary navbar-btn">Start new project </button></a>
-        {%  if errors %}
-        <script>
-        $(document).ready(function () {
 
-        $('#project-new').modal('show');
-        });
-        </script>
-        {% endif %}
-      {% endif %}
-</div>
-</div>
 {%  if access_error %}
 <div class="alert alert-danger" role="alert">{{ access_error }}</div>
 {% endif %}
@@ -73,6 +71,6 @@
     </div>
 
  </div>
-</div>
+
 
 {% endblock %}
